tests/cases/fail/list_str_method_arg_type.p4
def main() -> None:
    xs: list[str] = ["a"]
    xs.append(1)
